--- a/tutorialsHitesh&Harry/index.html
+++ b/tutorialsHitesh&Harry/index.html
@@ -10,16 +10,22 @@
       <p id="p2">Hello World!</p>
 
   <div class="container">
-    <ul class="nav-list">
+    <ul class="nav-list flex-box">
       <li  class="nav-item home">Home</li>
       <li class="nav-item">Conects us</li>
       <li class="nav-item">About</li>
       <li class="nav-item">Services</li>
-
     </ul>
   </div>
 
   </div>
+    <div class="parent">
+      <div class="week-day">Sunday</div>
+      <div class="week-day">Monday</div>
+      <div class="week-day">Tuesday</div>
+      <div class="week-day">Wednesday</div>
+      <div class="week-day">Thursday</div>
+    </div>
       <script src="index.js"></script>
     </body>
   </html>
