DOM and project color change

--- a/tutorialsHitesh&Harry/index.html
+++ b/tutorialsHitesh&Harry/index.html
@@ -26,6 +26,14 @@
       <div class="week-day">Wednesday</div>
       <div class="week-day">Thursday</div>
     </div>
+    <div class="color-picker-container">
+      <ul class="list-container">
+        <li class="list-item red" id="red"></li>
+        <li class="list-item green"></li>
+        <li class="list-item blue" id="blue"></li>
+        <li class="list-item white"></li>
+      </ul>
+    </div>
       <script src="index.js"></script>
     </body>
   </html>
