--- a/tutorialsHitesh&Harry/index.html
+++ b/tutorialsHitesh&Harry/index.html
@@ -7,8 +7,14 @@
       <title>myWebsite</title>
     </head>
     <body>
+      <h1>80% Coding, 20% Theory → Build more, watch fewer tutorials.
+
+      </h1>
       <button>Button Clicked</button>
-      <p id="p2">Hello World!</p>
+      <p id="p2"><pre>DOM Manipulation (if frontend-focused):
+        Event delegation, localStorage, sessionStorage.
+        Intersection Observer, Web Components
+        https://javascript.info/localstorage.</pre></p>
 
   <div class="container">
     <ul class="nav-list flex-box">
@@ -36,5 +42,6 @@
       </ul>
     </div>
       <script src="index.js"></script>
+      <script src="harry.js"></script>
     </body>
   </html>
