--- a/tutorialsHitesh&Harry/index.html
+++ b/tutorialsHitesh&Harry/index.html
@@ -57,31 +57,8 @@
           <p>Event bubbling in JavaScript is a mechanism where an event triggered on a child element propagates upward through its ancestors in the DOM. 
             It allows parent elements to respond to events triggered by their child elements.</p>
             <p><strong>To stop event bubbling, you can use the event e.stopPropagation() method in the event handler. This prevents the event from propagating to parent elements, so only the target element's event listener is triggered.
-              <code><html>
-<head>
-    <style>
-        *{
-            margin: 25px;
-            box-sizing: border-box;
-        }
-        .grandparent{
-            height: 350px;
-            width: 350px;
-            border: 2px solid red;
-        }
-        .parent{
-            height: 250px;
-            width: 250px;
-            border: 2px solid blue;
-        }
-        .child{
-            height: 150px;
-            width: 150px;
-            border: 2px solid green;
-        }
-    </style>
-</head>
-<body>
+              <html>
+
     <div class="grandparent" id="one">
         Grandparent
         <div class="parent" id="two">
@@ -91,7 +68,29 @@
             </div>
         </div>
     </div>
-    <script>
+    <code><pre>
+      let grandparent=document.getElementById('one')
+        let parent=document.getElementById('two')
+        let child=document.getElementById('three')
+        grandparent.addEventListener('click',function(e){
+            e.stopPropagation()
+            console.log("Grandparent Clicked")
+        })
+        parent.addEventListener('click',function(e){
+            e.stopPropagation()
+            console.log("Parent Clicked")
+        })
+        child.addEventListener('click',function(e){
+            e.stopPropagation()
+            console.log("Child Clicked")
+        })
+    </pre></code>
+            </strong></p>
+      </div>
+    </div>
+      <script src="index.js"></script>
+      <script src="harry.js"></script>
+      <script>
         let grandparent=document.getElementById('one')
         let parent=document.getElementById('two')
         let child=document.getElementById('three')
@@ -108,12 +107,5 @@
             console.log("Child Clicked")
         })
     </script>
-</body>
-</html></code>
-            </strong></p>
-      </div>
-    </div>
-      <script src="index.js"></script>
-      <script src="harry.js"></script>
     </body>
   </html>
