--- a/project1/index.html
+++ b/project1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="projects.css">
     <title>Document</title>
 </head>
-<body>
+<body background="dark">
     <div>Hello project folder </div>
+    <script src="./prjects.js"></script>
 </body>
 </html>
