--- a/project1/index.html
+++ b/project1/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="projects.css">
-    <title>Document</title>
+    <title>Projects</title>
 </head>
 <body background="dark">
+    <h1>Projets</h1>
     <div>Hello project folder </div>
     <script src="./prjects.js"></script>
 </body>
