--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -20,6 +20,10 @@
       <button class="btn" id="prev" disabled>Prev</button>
       <button class="btn" id="next">Next</button>
     </div>
+
+    <div>
+      
+    </div>
     <script src="./prjects.js"></script>
   </body>
 </html>
