--- a/learnDemo/index.html
+++ b/learnDemo/index.html
@@ -9,6 +9,21 @@
     <title>myDEMO</title>
 </head>
 <body>
+    <h1>Felx box </h1>
+
+    <div class="flex-container">
+        
+        <div class="flex-item">
+                <div>lis1 of flex item</div>
+                <div>lis1 of flex item</div>
+                <div>lis1 of flex item</div>
+        </div>
+    </div>
+    <div class="dropdown"><span class="d">Dropdown</span>
+        <ul class="dropdown-list"><li>d1</li>
+        <li>d2</li>
+        <li>d3</li></ul>
+    </div>
     <div>
         <h1><a target="_blank" href="https://www.w3schools.com/html/html_attributes.asp">w3schools</a></h1>
         <h1><a target="_blank" href="https://www.w3schools.com.asp">w3schools</a></h1>
