--- a/learnDemo/index.html
+++ b/learnDemo/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png"  href="favicon-32x32.png">
+    <script type="text/javascript" src="script.js"></script>
 
     <title>myDEMO</title>
 </head>
