basic update css

--- a/tutorialsHitesh&Harry/index.html
+++ b/tutorialsHitesh&Harry/index.html
@@ -7,7 +7,7 @@
       <title>myWebsite</title>
     </head>
     <body>
-      <h1>80% Coding, 20% Theory → Build more, watch fewer tutorials.
+      <h1   class="jeader1" id="id1">80% Coding, 20% Theory → Build more, watch fewer tutorials.
         <h2>DomainFree : https://server3.webhostmost.com:2222/evo/</h2>
       </h1>
       <button>Button Clicked</button>
