--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>dom and Events</h1>
-    <script src="script.js"></script>
+    <h1 style="color: aqua;">“Understanding comes from BUILDING, not watching”</h1>
+    <h2>Watch → Pause → Build → Repeat → Recall</h2>
+    <h2>Set a gole today that ypu gonna make a website like ecmese netflix or smthing
+        80% code 20 % reading 
+    </h2>
+    <p>a literal is a fixed, constant value written directly in the source code, representing data like numbers, text, 
+        or true/false states</p>
 </body>
+<script src="script.js"></script>
+
 </html>
