Objects basic to advance

--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -15,6 +15,7 @@
     </h2>
     <p>a literal is a fixed, constant value written directly in the source code, representing data like numbers, text, 
         or true/false states</p>
+        <h4 class="test">hello tst</h4>
 </body>
 <script src="script.js"></script>
 
