--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -15,6 +15,11 @@
     </h2>
     <p>a literal is a fixed, constant value written directly in the source code, representing data like numbers, text, 
         or true/false states</p>
+        <p>An iterator is an object that knows how to access items from a collection one at a time. It implements the iterator protocol (has next() method).
+            Iterable: Something you can loop over with for...of
+
+
+        </p>
         <h4 class="test">hello tst</h4>
 </body>
 <script src="script.js"></script>
