DOM HTML colection and NodeLIst menuplation and acceing the tag classes

--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -7,7 +7,7 @@
     <title>Dom and events</title>
 </head>
 <body>
-    <h1>dom and Events</h1>
+    <h1 class="header" id="header">dom and Events</h1>
     <h1 style="color: aqua;">“Understanding comes from BUILDING, not watching”</h1>
     <h2>Watch → Pause → Build → Repeat → Recall</h2>
     <h2>Set a gole today that ypu gonna make a website like ecmese netflix or smthing
@@ -17,10 +17,12 @@
         or true/false states</p>
         <p>An iterator is an object that knows how to access items from a collection one at a time. It implements the iterator protocol (has next() method).
             Iterable: Something you can loop over with for...of
-
-
         </p>
-        <h4 class="test">hello tst</h4>
+        <h1 class="test">hello tst <span style="display: none;">I am span for testing</span></h1>
+        <ul></ul>
+        <li class="listItem">List 1</li>
+        <li class="listItem">List 2</li>
+        <li class="listItem">List 3</li>
 </body>
 <script src="script.js"></script>
 
