--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -23,7 +23,18 @@
         <li class="listItem">List 1</li>
         <li class="listItem">List 2</li>
         <li class="listItem">List 3</li>
+
+        <div class="parent">
+            <div class="child" >day 1</div>
+            <div class="child">day 2</div>
+            <div class="child">day 3</div>
+
+            <div class="child">day 4</div>
+        </div>
 </body>
 <script src="script.js"></script>
-
+<script>
+    let parent = document.querySelector('.parent')
+    Array.from(parent.children).forEach((div) => div.style.color="green")
+</script>
 </html>
