--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -19,11 +19,11 @@
             Iterable: Something you can loop over with for...of
         </p>
         <h1 class="test">hello tst <span style="display: none;">I am span for testing</span></h1>
-        <ul></ul>
+        <ul class="ul-list">
         <li class="listItem">List 1</li>
         <li class="listItem">List 2</li>
         <li class="listItem">List 3</li>
-
+    </ul>
         <div class="parent">
             <div class="child" >day 1</div>
             <div class="child">day 2</div>
@@ -31,6 +31,7 @@
 
             <div class="child">day 4</div>
         </div>
+        <div class="googleLink"><a class= "googleLink" href="https://google.com">Google Link</a> </div>
 </body>
 <script src="script.js"></script>
 <script>            
