Project change the color with start and stop Interval butttn, settimeout

--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -18,20 +18,24 @@
         <p>An iterator is an object that knows how to access items from a collection one at a time. It implements the iterator protocol (has next() method).
             Iterable: Something you can loop over with for...of
         </p>
-        <h1 class="test">hello tst <span style="display: none;">I am span for testing</span></h1>
+        
+        <h3 class="test">hello tst <span style="display: none;">I am span for testing</span></h3>
         <ul class="ul-list">
-        <li class="listItem">List 1</li>
+        <li class="listItem">The main differences between function declarations (function x(){}) and function expressions (let x = function(){}):
+
+            1. Hoisting Behavior
+            </li>
         <li class="listItem">List 2</li>
         <li class="listItem">List 3</li>
     </ul>
         <div class="parent">
             <div class="child" >day 1</div>
-            <div class="child">day 2</div>
-            <div class="child">day 3</div>
-
-            <div class="child">day 4</div>
+            <div class="child">day 2</div>                              
         </div>
         <div class="googleLink"><a class= "googleLink" href="https://google.com">Google Link</a> </div>
+        <button id="clear">Stop timeOut</button>
+        <button class="start">StartInterval</button>
+        <button class="stop">StopInterval</button>
 </body>
 <script src="script.js"></script>
 <script>            
