Project identify the keyDown and call(), apply()

--- a/JS_revision_CodeOrChaipart2/index.html
+++ b/JS_revision_CodeOrChaipart2/index.html
@@ -36,6 +36,11 @@
         <button id="clear">Stop timeOut</button>
         <button class="start">StartInterval</button>
         <button class="stop">StopInterval</button>
+        <div class="project-pressany-key">
+            <div class="insert">
+                <div class="key">Press any key</div>
+            </div>
+        </div>
 </body>
 <script src="script.js"></script>
 <script>            
